feat: harden tenant authorization and app governance